[package]
name = "oss-pipe"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jd-opensource/oss_pipe"

[[bin]]
name = "oss_pipe"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1.45.1", features = ["full", "tracing"] }
clap = "4.5.40"
rustyline = "16.0.0"
rustyline-derive = "0.11.1"
shellwords = "1.1.0"
lazy_static = "1.4.0"
sysinfo = "0.35.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34-deprecated"
log = "0.4.20"
log4rs = "1.2.0"
rs-snowflake = "0.6.0"
async-trait = "0.1.88"
walkdir = "2.3.2"
bytes = "1.7.2"
rayon = "1.10.0"
time = "0.3.41"
rand = "0.9.1"
rust-crypto = "0.2.36"
num_cpus = "1.17.0"
dashmap = "6.1.0"
regex = "1.11.0"
termtree = "0.5.1"
indicatif = "0.17.6"
notify = "8.0.0"
tabled = "0.20.0"
rust_decimal = "1.37.2"
once_cell = "1.21.3"
thiserror = "2.0.12"
indexmap = "2.9.0"
uuid = { version = "1.17.0", features = ["v4"] }
governor = "0.10.0"

tracing = { version = "0.1.40", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
tracing-serde = "0.2.0"

# s3
# aws-config = { path = "../aws-sdk-rust/sdk/aws-config", features = [
#     "behavior-version-latest",
# ] }
# aws-sdk-s3 = { path = "../aws-sdk-rust/sdk/s3" }
# aws-credential-types = { path = "../aws-sdk-rust/sdk/aws-credential-types" }
# aws-smithy-types = { path = "../aws-sdk-rust/sdk/aws-smithy-types" }
# aws-types = { path = "../aws-sdk-rust/sdk/aws-types" }

# s3
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "=1.68.0"
aws-credential-types = "1.2.3"
aws-smithy-types = "1.3.2"
aws-types = "1.3.7"

# aws-sdk-s3 = "=1.68.0"

[[example]]
name = "notify"
path = "examples/notify.rs"

[[example]]
name = "sample"
path = "examples/sample.rs"

[profile.release]
opt-level = "z"   # 或 "s"（更激进的大小优化）
lto = true        # 链接时优化
codegen-units = 1 # 牺牲并行编译换取更优体积
panic = "abort"   # 替换 panic 展开为直接终止
strip = true      # 自动去除符号信息
